--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -184,7 +184,7 @@
 </div>
 
 
-<!--4813  REVISED Export Dataset Dialogbox--STARTS HERE-->
+<!--4813 REVISED Export Dataset Dialogbox STARTS HERE-->
 <!--Request Export Dataset Dialogbox-->
 <div *ngIf="mailType == 'Dataset export Mail'">
   <h3>Request to Export Data</h3>
@@ -284,8 +284,8 @@
           <mat-error align="end" *ngIf="!messageModel.justifyExport">Required</mat-error>
         </mat-form-field>
 
-        <!-- -SDC-4813 -  Moved Acceptable Use Policy to Approval Form - Non Trusted Users-->
-        <hr>
+        <hr>      
+        <!-- SDC4813  Moved Acceptable Use Policy to Approval Form for NonTrusted Users -->
         <br/>
         <p-panel header="Acceptable Use Policy" >
           <div class="panel-div" [innerHTML]="expWorkflow[selectedDataSet][selectedDataProvider]['UsagePolicyDesc']" *ngIf="expWorkflow && selectedDataSet && selectedDataProvider && expWorkflow[selectedDataSet] && expWorkflow[selectedDataSet][selectedDataProvider]"></div>
@@ -298,9 +298,8 @@
           </div>
         </div>
 
-      <!--</mat-dialog-content> -->
-        <!-- -SDC-4813 -  FIX: Submit Button on Approval Form for Non-Trusted Users-->
-        <hr>
+        <hr>     
+        <!-- SDC4813 Changed from Next  to Submit Button on Approval Form for NonTrusted Users -->
         <mat-dialog-actions>
           <button class="btn btn-primary dotBtn request-exportCancelBtn" (click)="onNoClick()">CANCEL</button>
           <button class="btn btn-primary dotBtn request-exportSubmitBtn"
@@ -311,7 +310,7 @@
       </mat-dialog-actions>
     </mat-dialog-content>
 
-      <!-- Approval Form - Trusted Status -->
+      <!-- Approval Form - Trusted Users -->
       <mat-dialog-content *ngIf="trustedStatus">
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Name or short description of your derived dataset" [(ngModel)]="messageModel.derivedDatasetname" value="{{messageModel.derivedDatasetname}}" required>
@@ -343,7 +342,7 @@
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
         </mat-form-field>
 
-    <hr>
+        <hr>      
         <p-panel header="Acceptable Use Policy" >
           <div class="panel-div" [innerHTML]="expWorkflow[selectedDataSet][selectedDataProvider]['UsagePolicyDesc']" *ngIf="expWorkflow && selectedDataSet && selectedDataProvider && expWorkflow[selectedDataSet] && expWorkflow[selectedDataSet][selectedDataProvider]"></div>
         </p-panel>
@@ -369,7 +368,7 @@
       </mat-dialog-content>
     </mat-tab>
 
-      <!-- Auto Export Form  - Trusted Status -->
+      <!-- Auto Export Form  - Trusted Users -->
     <mat-tab label="Auto-Export Status" #tab3 [disabled]='selectedIndex!=2' *ngIf="trustedStatus">
       <hr>
       <p><b>Auto-Export is a feature that allows data analysts to export their derived data or analysis products automatically. It avoids the need to manually request exports many times for a similar type of export (as a trusted user). Data analysts must request access to this feature for specific types of exports from data providers. At any point after approval, the data provider may revoke this permission. The trusted status associated with access to the auto-export functionality is given per Project, Data Provider, and Per Sub-Dataset/Datatype.</b></p>
@@ -422,6 +421,86 @@
     </mat-tab>
   </mat-tab-group>
 </div>
+<!--4813 - Note: Auto Export Request is not being submitted anywhere in webapp or app.py-- despite radio button being checked?? -->
+
+
+<!-- -4813 - NEW  Request Trusted User Status is moved a separate Dialogbox-->
+<!--Request Trusted User Status Dialogbox-->
+<div *ngIf="mailType == 'Request Trusted Status Mail'">    
+  <h3>Request Trusted User Status</h3>
+  <mat-dialog-content style="height: 100%;">
+    <hr>
+    <p><b>Trusted Status is a mechanism to help speed the turnaround of future, similar export requests. Obtaining Trusted Status eliminates the Data Provider review/approval requirements for subsequent, similar requests - and will enable immediate export of data, at the time of your request.</b>
+    <br>
+    <b>A separate Trusted Status should be acquired, depending on each specific combination of Project, Data Provider, and Sub-Data Set/Data Type requested for export.</b></p>
+    <br>
+    <label style="float:right"> * All fields are mandatory </label>
+    <hr>  
+
+        <mat-form-field style='width: 100%'>
+          <mat-select class="exportSelect" placeholder='For which Project/Dataset would you like to become a Trusted User?' [(ngModel)]="messageModel.datasettype" (selectionChange)="setDataProviders($event)" required>
+            <mat-option *ngFor="let dataSetType of dataSetTypes" [value]="dataSetType.value">
+              {{ dataSetType.viewValue }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="!messageModel.datasettype">Please select Dataset name</mat-error>
+        </mat-form-field>
+
+        <mat-form-field style='width: 100%' *ngIf="dataProviderNames.length > 0">
+          <mat-select class="exportSelect" placeholder='Data Provider' [(ngModel)]="messageModel.dataProviderName" (selectionChange)="setSubDatasets($event)" required>
+            <mat-option *ngFor="let dataProviderName of dataProviderNames" [value]="dataProviderName.value">
+              {{ dataProviderName.viewValue }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="!messageModel.dataProviderName">Please select Data Provider Name</mat-error>
+        </mat-form-field>
+
+        <mat-form-field style='width: 100%' *ngIf="subDataSets.length > 0">
+          <mat-select class="exportSelect" placeholder='Sub-Dataset/Data Type' [(ngModel)]="messageModel.subDataSet" (selectionChange)="chkTrustedStatus($event)" required>
+            <mat-option *ngFor="let subDataSet of subDataSets" [value]="subDataSet.value">
+              {{ subDataSet.viewValue }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="!messageModel.subDataSet">Please select Sub DataSet Type </mat-error>
+          <!--<mat-error *ngif="this.trustedStatus = 'Yes'">You have already been granted Trusted Status for this Dataset.</mat-error>-->
+        </mat-form-field>
+
+<!----4813 - NEW VARIABLE -->
+        <div>
+        <mat-form-field style='width: 100%'>
+          <input matInput placeholder="Justification for Request?" [(ngModel)]="messageModel.trustedUserJustification" value="{{messageModel.trustedUserJustification}}" required>
+          <mat-hint align="end">Alpha-numeric characters only</mat-hint>
+          <mat-error align="end" *ngIf="!messageModel.trustedUserJustification">Required</mat-error>
+          <mat-error *ngIf="!messageModel.trustedUserJustification">Please enter your justification for this request </mat-error>
+        </mat-form-field>
+      </div>
+        <br>
+        <hr>
+
+       <p-panel header="Acceptable Use Policy" >
+         <div class="panel-div" [innerHTML]="expWorkflow[selectedDataSet][selectedDataProvider]['UsagePolicyDesc']" *ngIf="expWorkflow && selectedDataSet && selectedDataProvider && expWorkflow[selectedDataSet] && expWorkflow[selectedDataSet][selectedDataProvider]"></div>
+       </p-panel>
+        <br/>
+        <div> <!--*ngIf="!trustedStatus" -->
+          <div class="ui-g">
+            <div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Accept" label="Accept"  [disabled]="trustedAcceptableUseDisabled"  [(ngModel)]="acceptableUse" required></p-radioButton></div>
+<!----- -4813 - DOES THE DECLINE POLICY BUTTON ACTUALLY NEED TO BE HERE?--------------------------------------------------------------------------------------------------------------------------------------> 
+        <!--<div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Decline" label="Decline" [disabled]="trustedAcceptableUseDisabled" [(ngModel)]="acceptableUse"></p-radioButton></div>-->      
+          </div>
+        </div>
+        <hr>
+        <mat-dialog-actions>
+            <button class="btn btn-primary dotBtn request-exportCancelBtn" (click)="onNoClick()">CANCEL</button>
+          <span>
+             <button class="btn btn-primary dotBtn request-exportSubmitBtn"
+                    [disabled]="!messageModel.datasettype || !messageModel.dataProviderName || !messageModel.subDataSet || !messageModel.trustedUserJustification || !acceptableUse" 
+                    (click)="onTrustedStatusRequest()">SUBMIT
+             </button>
+          </span>
+        </mat-dialog-actions>
+      </mat-dialog-content>
+</div>
+
 
 <!-- ngIf to render the dialog only when data.mailType is resize -->
 <div *ngIf="mailType === 'reSize Request'">
@@ -762,7 +841,7 @@
 </div>
 
 <div *ngIf="mailType == 'Details for export request'">
-  <h3>Details for approval form</h3>
+  <h3>cf6 Details for approval form</h3>
   <hr>
     <mat-form-field style='width: 100%'>
       <input matInput placeholder="Name or short description of your derived dataset" [value]="approvalForm.derivedDataSetname">
