--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -291,7 +291,7 @@
       <hr>
       <mat-dialog-content *ngIf="!trustedStatus">
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. WAZE Geospatial Data"
+          <input matInput title="e.g. Aggregated Jam Counts, Virginia Alerts in 2020, etc."
             placeholder="Name or short description of your derived dataset"
             [(ngModel)]="messageModel.derivedDatasetname" value="{{messageModel.derivedDatasetname}}" required>
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
@@ -300,7 +300,7 @@
 
         <mat-form-field style='width: 100%'>
           <input matInput
-            title="e.g. Geospatial data of incident reports from WAZE reporting system for the last five years."
+            title="e.g. Waze jams aggregated and counted in 2022, Average number of Waze alerts per day in Virginia in 2020, etc."
             placeholder="Detailed description of the derived dataset" [(ngModel)]="messageModel.detailedderiveddataset"
             value="{{messageModel.detailedderiveddataset}}" required>
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
@@ -308,30 +308,31 @@
         </mat-form-field>
 
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. WAZE" placeholder="Anchor dataset of interest or data provider"
+          <input matInput title="e.g. CVP, Waze, ARDS, etc." placeholder="Anchor dataset of interest or data provider"
             [value]="selectedDataProvider" required>
           <mat-error align="end" *ngIf="!messageModel.dataprovider">Required</mat-error>
         </mat-form-field>
 
         <mat-form-field style='width: 100%'>
-          <input matInput placeholder="Specific sub-datasets or data types used" [value]="selectedDatatype" required>
+          <input matInput title="e.g. Speed, BSM, Alerts, Jams, Railroad, etc."
+            placeholder="Specific sub-datasets or data types used" [value]="selectedDatatype" required>
           <mat-error align="end" *ngIf="!messageModel.datatype">Required</mat-error>
         </mat-form-field>
 
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. KARMA Geospatial Data" placeholder="Additional datasources"
-            [(ngModel)]="messageModel.datasources" value="{{messageModel.datasources}}" required>
+          <input matInput title="e.g. US Census Bureau, ArcGIS Online, US Geological Survey, etc."
+            placeholder="Additional datasources" [(ngModel)]="messageModel.datasources"
+            value="{{messageModel.datasources}}" required>
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
           <mat-error align="end" *ngIf="!messageModel.datasources">Required</mat-error>
         </mat-form-field>
-
         <!-- <mat-form-field style='width: 100%'>
           <input matInput placeholder="Tags" [(ngModel)]="messageModel.tags" value="{{messageModel.tags}}">
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
         </mat-form-field> -->
-
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. The export is needed to obtain general metrics of the project for reporting."
+          <input matInput
+            title="e.g. Used in CVP dashboard, Used for presentation at SDC Quarterly Executive Briefing, etc."
             placeholder="Justification of Export" [(ngModel)]="messageModel.justifyExport"
             value="{{messageModel.justifyExport}}" required>
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
@@ -351,7 +352,7 @@
       </mat-dialog-content>
       <mat-dialog-content *ngIf="trustedStatus">
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. WAZE Geospatial Data"
+          <input matInput title="e.g. Aggregated Jam Counts, Virginia Alerts in 2020, etc."
             placeholder="Name or short description of your derived dataset"
             [(ngModel)]="messageModel.derivedDatasetname" value="{{messageModel.derivedDatasetname}}" required>
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
@@ -359,22 +360,24 @@
         </mat-form-field>
         <mat-form-field style='width: 100%'>
           <input matInput
-            title="e.g. Geospatial data of incident reports from WAZE reporting system for the last five years."
+            title="e.g. Waze jams aggregated and counted in 2022, Average number of Waze alerts per day in Virginia in 2020, etc."
             placeholder="Detailed description of the derived dataset" [(ngModel)]="messageModel.detailedderiveddataset"
             value="{{messageModel.detailedderiveddataset}}">
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
         </mat-form-field>
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. WAZE" placeholder="Anchor dataset of interest or data provider"
+          <input matInput title="e.g. CVP, Waze, ARDS, etc." placeholder="Anchor dataset of interest or data provider"
             [value]="selectedDataProvider" required>
           <!-- <mat-error align="end" *ngIf="!messageModel.dataprovider">Required</mat-error> -->
         </mat-form-field>
         <mat-form-field style='width: 100%'>
-          <input matInput placeholder="Specific sub-datasets or data types used" [value]="selectedDatatype">
+          <input matInput title="e.g. Speed, BSM, Alerts, Jams, Railroad, etc."
+            placeholder="Specific sub-datasets or data types used" [value]="selectedDatatype">
         </mat-form-field>
         <mat-form-field style='width: 100%'>
-          <input matInput title="e.g. KARMA Geospatial Data" placeholder="Additional datasources"
-            [(ngModel)]="messageModel.datasources" value="{{messageModel.datasources}}">
+          <input matInput title="e.g. US Census Bureau, ArcGIS Online, US Geological Survey, etc."
+            placeholder="Additional datasources" [(ngModel)]="messageModel.datasources"
+            value="{{messageModel.datasources}}">
           <mat-hint align="end">Alpha-numeric characters only</mat-hint>
         </mat-form-field>
         <!-- <mat-form-field style='width: 100%'>
@@ -914,30 +917,27 @@
   <h3>Details for approval form</h3>
   <hr>
   <mat-form-field style='width: 100%'>
-    <input matInput title="e.g. WAZE Geospatial Data" placeholder="Name or short description of your derived dataset"
+    <input matInput placeholder="Name or short description of your derived dataset"
       [value]="approvalForm.derivedDataSetname">
   </mat-form-field>
   <mat-form-field style='width: 100%'>
-    <input matInput title="e.g. Geospatial data of incident reports from WAZE reporting system for the last five years."
-      placeholder="Detailed description of the derived dataset" [value]="approvalForm.detailedderiveddataset">
+    <input matInput placeholder="Detailed description of the derived dataset"
+      [value]="approvalForm.detailedderiveddataset">
   </mat-form-field>
   <mat-form-field style='width: 100%'>
-    <input matInput title="e.g. WAZE" placeholder="Anchor dataset of interest or data provider"
-      [value]="approvalForm.dataprovider">
+    <input matInput placeholder="Anchor dataset of interest or data provider" [value]="approvalForm.dataprovider">
   </mat-form-field>
   <mat-form-field style='width: 100%'>
     <input matInput placeholder="Specific sub-datasets or data types used" [value]="approvalForm.datatype">
   </mat-form-field>
   <mat-form-field style='width: 100%'>
-    <input matInput title="e.g. KARMA Geospatial Data" placeholder="Additional datasources"
-      [value]="approvalForm.datasources">
+    <input matInput placeholder="Additional datasources" [value]="approvalForm.datasources">
   </mat-form-field>
   <!-- <mat-form-field style='width: 100%'>
     <input matInput placeholder="Tags" [value]="approvalForm.tags">
   </mat-form-field> -->
   <mat-form-field style='width: 100%'>
-    <input matInput title="e.g. The export is needed to obtain general metrics of the project for reporting."
-      placeholder="Justification of Export" [value]="approvalForm.justifyExport">
+    <input matInput placeholder="Justification of Export" [value]="approvalForm.justifyExport">
   </mat-form-field>
   <mat-dialog-actions>
     <button class="btn btn-primary" style="float:right;" (click)="onNoClick()">CLOSE</button>
