Cleans some comments in html files

--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -54,7 +54,7 @@
           <hr />
           <button class="btn btn-primary dotBtn" [disabled]="this.selectedFiles.length==0" (click)=requestDownload()>Download Files</button>
           <hr>
-          <!--New TRUSTED STATUS Section of DataSets Table -->
+          <!--Trusted User Status Request-->
           <div>
             <p style="font-size:15px">Request Trusted User Status</p>
           <span style="color:grey">
