Adds Table Exports tbl to Export Requests page

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -1098,7 +1098,7 @@
 </div>
 
 <div *ngIf="mailType == 'Details for export request'">
-  <h3>Details for approval form</h3>
+  <h3>Details for Approval Form</h3>
   <hr>
   <mat-form-field style='width: 100%'>
     <input matInput placeholder="Name or short description of your derived dataset"
@@ -1128,10 +1128,8 @@
   </mat-dialog-actions>
 </div>
 
-
-
 <div *ngIf="mailType == 'Details for Edge Table Publication Request'">
-  <h3>Details re: Table Publish Request</h3>
+  <h3>Details for (Table) Approval Form</h3>
   <hr>
   <mat-form-field style='width: 100%'>
     <input matInput placeholder="Database Name"      
