--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -26,7 +26,7 @@
                       <td>{{exportFileRequest.ReqReceivedDate}}</td>
                       <td>{{exportFileRequest.userFullName}}</td>
                       <td>{{exportFileRequest.description}}</td>
-                      <td>{{exportFileRequest.team}}</td>
+                      <td><div style="word-break:break-all;">{{exportFileRequest.team}}}</div></td>
                       <td>{{exportFileRequest.dataset}}</td>
                       <!-- <td><a style="cursor:pointer;word-break:break-all;" (click)="requestDownload(exportFileRequest)">{{exportFileRequest.reviewFile}}</a></td> -->
                       <td><div style="word-break:break-all;">{{exportFileRequest.reviewFile}}</div></td>   
@@ -53,6 +53,61 @@
           </p-table>
           <hr />
           </mat-expansion-panel>
+
+<!--NEW--------------------------------------------------------------------------------------------------------------------------------------------->
+         <!-- Table Requests-->
+          <mat-expansion-panel style="margin-top: 40px;" [expanded]="true">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+               Export Table Requests
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+ <!--TODO: Name RequestType -- Confirm where Trusted Request Items come from -- see Trusted Status Table Load below -- do similar here-->           
+            <div *ngIf="!exportTableRequests">No table export requests</div>
+            <span style="color:grey">This section displays the list of tables requested for export to the Edge DB</span><hr>
+           <!-- <div><button class="btn btn-primary dotBtn" (click)="uploadFilesToS3('Upload Files To S3')">Upload Files</button></div>-->
+            <p-table #dt [columns]="colsExportTable" [value]="exportTableRequests" [paginator]="true" [rows]="10" [totalRecords]="exportTableRequests.length"  dataKey="filename">
+              <ng-template pTemplate="header" let-columns>
+                  <!--VERIFY WHAT IS HAPPENING HERE -- DO WE REMOVE OR ADJUST THIS FOR TABLE EXPORTS VS FILE ASSOCIATIONS-->
+                  <tr>
+                      <th *ngFor="let col of columns" [ngClass]="{smallWidth: col.header != 'Filename'}">
+                          {{col.header}} <br/>
+                          <input size="40" *ngIf="col.header == 'Filename'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                      </th>
+                  </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-exportTableRequest let-columns="columns">
+                  <tr>
+                      <td>{{exportTableRequest.ReqReceivedDate}}</td>
+                      <td>{{exportTableRequest.userFullName}}</td>
+                      <td><div style="word-break:break-all;">{{exportTableRequest.UserEmail}}</div></td>
+                      <td>{{exportTableRequest.justification}}</td> 
+                      <td>{{exportTableRequest.team}}</td>
+                      <td>{{exportTableRequest.dataset}}</td>
+                      <td><div style="word-break:break-all;">{{exportTableRequest.table}}</div></td>
+                        <!-- <td><div style="word-break:break-all;">{{exportFileRequest.reviewFile}}</div></td> -->   
+                        <td>
+                            <div *ngIf="exportTableRequest.RequestReviewStatus == 'Submitted'"><i class="material-icons iconFont" (click)="submitApproval('Approved',exportTableRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('Rejected',exportTableRequest)" >close</i></div>                           
+                            
+                            <div *ngIf="exportTableRequest.RequestReviewStatus == 'Approved'">
+                                    <p-message severity="success" text="{{exportTableRequest.RequestReviewStatus}}"></p-message> 
+                            </div> 
+                            <div *ngIf="exportTableRequest.RequestReviewStatus == 'Rejected'">
+                                        <p-message severity="error" text="{{exportTableRequest.RequestReviewStatus}}"></p-message> 
+                            </div>
+                            <!--<button class="btn btn-primary dotBtn"  (click)="submitApproval('Approved',exportFileRequest)">Approve</button><button class="btn btn-primary dotBtn"  (click)="submitApproval('Rejected',exportFileRequest)">Reject</button></td>-->
+                        </td>
+                        <td>
+                            <i class="material-icons iconFont" (click)="renderTableApprovalForm(exportTableRequest)">insert_drive_file</i>
+                        </td>
+                  </tr>
+              </ng-template>
+          </p-table>
+          <hr />
+          </mat-expansion-panel>
+
+
+
 
          <!-- Trust Requests-->
          <mat-expansion-panel style="margin-top: 40px;" [expanded]="true">
