Changes 'Learn More' href text size

--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -76,12 +76,12 @@
             My Edge Database 
             </mat-panel-title>
           </mat-expansion-panel-header> 
-          <!--TO DO: Create NEW FAQ SECTION eventually-->
+
           <span style="color: grey">DRAFT TEXT<br/>
             <p>Researchers can export their summarized, aggregated and/or analysis results data, which do not contain sensitive information, to the public Edge database.  
                   This enhances analytical capabilities, enabling connections from the Edge database to local applications and/or other public data sources.</p>
             <p>Users are required to submit initial table export requests, and any subsequent changes to the given table schema, for review and approval by the Data Steward. </p>
-            <a style="font-size:16px;" href="https://securedatacommons.atlassian.net/wiki/spaces/DESK/pages/1462468790/RT+Demo+Exporting+the+Results+of+Your+Research" aria-label="Open external link to form in a new tab" target="_blank" rel="noopener">
+            <a href="https://securedatacommons.atlassian.net/wiki/spaces/DESK/pages/1462468790/RT+Demo+Exporting+the+Results+of+Your+Research" aria-label="Open external link to form in a new tab" target="_blank" rel="noopener">
             Learn more </a>about requesting table exports to the Edge Database.
           </span>
           <hr>
